# Ray-Clone

src/: api.h  common_types.h  future_store.h  object_ref.h  ray_config.h  ray_runtime.cc  ray_runtime.h  register_function.h  serializer.h  task_caller.h  task_scheduler.h
src/protobuf/: remote.proto
src/remote_function_utils/: register_function.h
src/task/: rr_task_scheduler.cc  rr_task_scheduler.h  task.h  task_caller.h  task_executor.h  task_receiver.cc  task_receiver.h  task_scheduler.h  task_spec.h  task_submitter.cc  task_submitter.h
src/test/: CMakeLists.txt  test_future_store.cc  test_register_function.cc  test_serializer.cc
